--- a/translations/kangyur/placeholders/079-006_toh379-the_supplementary_tantra_to_the_tantra_the_preeminence_of_varahi.xml
+++ b/translations/kangyur/placeholders/079-006_toh379-the_supplementary_tantra_to_the_tantra_the_preeminence_of_varahi.xml
@@ -11,10 +11,11 @@
                 <title type="otherTitle" xml:lang="en">[Two additional chapters of the preceding tantra. There is no initial title for this work, so the title here is taken from the colophon. ]</title>
             </titleStmt>
     <editionStmt>
-                <edition>0.0.1 <date>2020</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-006"/>
     <date/>
             </publicationStmt>
@@ -29,11 +30,24 @@
                     <idno source-id="O1JC114941JC12077" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2020-08-11T06:41:06.053Z" user="admin">11/08/2020 06:41:06</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2020-08-11T06:41:02.583Z" user="andreas">0.0.1</note>
-    <note type="updated" update="publication-date" value="" date-time="2020-08-11T06:41:02.583Z" user="andreas"/>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#andreas" when="2020-08-11T06:41:02.583Z" type="text-version" status="0.0.1" xml:id="UT22084-079-006-1">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#andreas" when="2020-08-11T06:41:02.583Z" type="publication-date" xml:id="UT22084-079-006-2">
+                    <desc/>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-079-006-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:48:44.619Z" type="translation-status" status="3" xml:id="UT22084-079-006-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T13:48:44.619Z" type="text-version" status="0.0.3" xml:id="UT22084-079-006-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
