--- a/translations/kangyur/placeholders/079-007_toh380-the_propitiation_ritual_of_vajrayogini.xml
+++ b/translations/kangyur/placeholders/079-007_toh380-the_propitiation_ritual_of_vajrayogini.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rig pa 'dzin pa rdo rje rnal 'byor ma'i sgrub thabs zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">vidyādhariṇīvajra­yoginīsādhananāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-007"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12078" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:27:55 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-007-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:05:02.026Z" type="translation-status" status="3" xml:id="UT22084-079-007-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:05:02.026Z" type="text-version" status="0.0.1" xml:id="UT22084-079-007-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
