--- a/translations/kangyur/placeholders/079-039_toh412-the_tantra_of_the_meaning_of_the_essential_nature_of_the_mind.xml
+++ b/translations/kangyur/placeholders/079-039_toh412-the_tantra_of_the_meaning_of_the_essential_nature_of_the_mind.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">de bzhin gshegs pa thams cad kyi thugs kyi snying po don gyi rgyud/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">sarvatathāgatacitta­garbhārthatantra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-039"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12113" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:36:54 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-039-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:06:12.07Z" type="translation-status" status="3" xml:id="UT22084-079-039-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:06:12.07Z" type="text-version" status="0.0.1" xml:id="UT22084-079-039-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
