--- a/translations/kangyur/placeholders/084-002_toh480-the_great_secret_yogatantra_the_tip_of_the_vajra.xml
+++ b/translations/kangyur/placeholders/084-002_toh480-the_great_secret_yogatantra_the_tip_of_the_vajra.xml
@@ -8,7 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">vajraśekharamahāguhyayogatantra</title>
                 <title type="mainTitle" xml:lang="en">The Great Secret Yogatantra, the Tip of the Vajra</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-084-002"/>
             </publicationStmt>
             <sourceDesc>
@@ -22,9 +23,19 @@
                     <idno source-id="O1JC114941JC12194" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:34:22 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-084-002-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:08:01.581Z" type="translation-status" status="3" xml:id="UT22084-084-002-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:08:01.581Z" type="text-version" status="0.0.1" xml:id="UT22084-084-002-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
