--- a/translations/kangyur/placeholders/093-008_toh693,899-the_incantation_of_the_eleven_faced_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-008_toh693,899-the_incantation_of_the_eleven_faced_avalokitesvara.xml
@@ -13,7 +13,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug zhal bcu gcig pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvaraikādaśa­mukha­nāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,9 +37,19 @@
                     <idno source-id="O1JC114941JC12661" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:20.096Z" user="celso">23/09/2021 17:35:20</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-008-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:10:11.256Z" type="translation-status" status="3" xml:id="UT22084-093-008-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:10:11.256Z" type="text-version" status="0.0.1" xml:id="UT22084-093-008-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
