--- a/translations/kangyur/placeholders/093-010_toh695,911-the_essence_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-010_toh695,911-the_essence_of_avalokitesvara.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs kyi snying po/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs kyi snying po/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,9 +34,19 @@
                     <idno source-id="O1JC114941JC12673" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:05:52 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-010-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:13:05.99Z" type="translation-status" status="3" xml:id="UT22084-093-010-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:13:05.99Z" type="text-version" status="0.0.1" xml:id="UT22084-093-010-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
