--- a/translations/kangyur/placeholders/093-011_toh696,910-the_incantation_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-011_toh696,910-the_incantation_of_avalokitesvara.xml
@@ -12,7 +12,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug gi gzungs zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvaranāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-011"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +36,19 @@
                     <idno source-id="O1JC114941JC12672" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:23.005Z" user="celso">23/09/2021 17:35:23</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-011-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:16:28.579Z" type="translation-status" status="3" xml:id="UT22084-093-011-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:16:28.579Z" type="text-version" status="0.0.1" xml:id="UT22084-093-011-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
