--- a/translations/kangyur/placeholders/093-014_toh699,904-the_incantation_of_samantabhadra.xml
+++ b/translations/kangyur/placeholders/093-014_toh699,904-the_incantation_of_samantabhadra.xml
@@ -12,7 +12,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa kun tu bzang po zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasamantabhadranāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-014"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +36,19 @@
                     <idno source-id="O1JC114941JC12666" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:27.423Z" user="celso">23/09/2021 17:35:27</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-014-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:20:07.009Z" type="translation-status" status="3" xml:id="UT22084-093-014-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:20:07.009Z" type="text-version" status="0.0.1" xml:id="UT22084-093-014-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
