--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -13,11 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarasya nāmāṣṭaśatakam</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -56,6 +56,12 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2023-08-01T15:02:30.888Z" type="text-version" status="0.0.3" xml:id="UT22084-093-020-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:22:18.344Z" type="translation-status" status="3" xml:id="UT22084-093-020-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:22:18.344Z" type="text-version" status="0.0.4" xml:id="UT22084-093-020-7">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
