--- a/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-021_toh706-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -11,11 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarasya nāmāṣṭaśatakam</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-021"/>
                 <date/>
             </publicationStmt>
@@ -45,6 +45,12 @@
                     <desc/>
                 </change>
                 <change who="#line-tofte" when="2023-08-01T15:03:45.711Z" type="text-version" status="0.0.3" xml:id="UT22084-093-021-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:26:48.095Z" type="translation-status" status="3" xml:id="UT22084-093-021-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:26:48.095Z" type="text-version" status="0.0.4" xml:id="UT22084-093-021-7">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
