--- a/translations/kangyur/placeholders/093-037_toh722,812,1094-the_prayer_from_the_practice_of_avalokitesvara_that_is_like_the_wishfulfilling_jewel.xml
+++ b/translations/kangyur/placeholders/093-037_toh722,812,1094-the_prayer_from_the_practice_of_avalokitesvara_that_is_like_the_wishfulfilling_jewel.xml
@@ -16,7 +16,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug yid bzhin gyi nor bu'i rtog pa las smon lam 'byung ba</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn"/>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-037"/>
             </publicationStmt>
             <sourceDesc>
@@ -48,9 +49,19 @@
                     <idno source-id="O1JC114941JC12858" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:09:08 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-037-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:28:21.288Z" type="translation-status" status="3" xml:id="UT22084-093-037-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:28:21.288Z" type="text-version" status="0.0.1" xml:id="UT22084-093-037-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
