--- a/translations/kangyur/placeholders/093-038_toh723-a_summary_of_the_benefits_of_the_incantation_of_avalokitsvara.xml
+++ b/translations/kangyur/placeholders/093-038_toh723-a_summary_of_the_benefits_of_the_incantation_of_avalokitsvara.xml
@@ -11,7 +11,8 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">mahākāruṇika­nāmāryāvalokiteśvara­dhāraṇī anuśaṃsāsahitā sūtrāt saṃgrahitā</title>
                 <title type="otherTitle" xml:lang="en">[Note: the translation of the title here follows the Tibetan. The Sanskrit is dubious.]</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-093-038"/>
             </publicationStmt>
             <sourceDesc>
@@ -25,9 +26,19 @@
                     <idno source-id="O1JC114941JC12463" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:46.277Z" user="celso">23/09/2021 17:35:46</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-038-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:29:13.935Z" type="translation-status" status="3" xml:id="UT22084-093-038-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:29:13.935Z" type="text-version" status="0.0.1" xml:id="UT22084-093-038-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
