--- a/translations/kangyur/placeholders/094-010_toh733,906-the_incantation_of_avalokitesvara_hayagriva.xml
+++ b/translations/kangyur/placeholders/094-010_toh733,906-the_incantation_of_avalokitesvara_hayagriva.xml
@@ -12,7 +12,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa spyan ras gzigs dbang phyug ha ya grI ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryāvalokiteśvarahayagrīvadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-094-010"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +36,19 @@
                     <idno source-id="O1JC114941JC12668" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:35:49.163Z" user="celso">23/09/2021 17:35:49</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-010-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:42:12.478Z" type="translation-status" status="3" xml:id="UT22084-094-010-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:42:12.478Z" type="text-version" status="0.0.1" xml:id="UT22084-094-010-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
