--- a/translations/kangyur/placeholders/096-019_toh770-the_extant_practice_of_jambhalajalendra.xml
+++ b/translations/kangyur/placeholders/096-019_toh770-the_extant_practice_of_jambhalajalendra.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gnod gnas dbang po ci ltar byung ba'i rtog pa zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajambhalajalendra­yathālabdhakalpanāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-019"/>
             </publicationStmt>
             <sourceDesc>
@@ -24,9 +25,19 @@
                     <idno source-id="O1JC114941JC12516" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:30:56 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-019-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:43:05.185Z" type="translation-status" status="3" xml:id="UT22084-096-019-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:43:05.185Z" type="text-version" status="0.0.1" xml:id="UT22084-096-019-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
