--- a/translations/kangyur/placeholders/096-020_toh771,972-the_hundred_and_eight_names_of_jambhala.xml
+++ b/translations/kangyur/placeholders/096-020_toh771,972-the_hundred_and_eight_names_of_jambhala.xml
@@ -13,7 +13,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gnod 'dzin gyi mtshan brgya rtsa brgyad pa zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryajambhalanāmāṣṭaśatakam</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-020"/>
             </publicationStmt>
             <sourceDesc>
@@ -36,9 +37,19 @@
                     <idno source-id="O1JC114941JC12735" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:06:58 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-020-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:44:17.048Z" type="translation-status" status="3" xml:id="UT22084-096-020-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:44:17.048Z" type="text-version" status="0.0.1" xml:id="UT22084-096-020-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
