--- a/translations/kangyur/placeholders/096-025_toh776,1076-the_incantation_for_circumambulation_of_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/096-025_toh776,1076-the_incantation_for_circumambulation_of_the_three_jewels.xml
@@ -12,7 +12,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa dkon mchog gi rten la bskor ba bya ba'i gzungs zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryapradakṣinā­ratnatraya­nāmadhāraṇī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-025"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +36,19 @@
                     <idno source-id="O1JC114941JC12840" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:15.309Z" user="celso">23/09/2021 17:36:15</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-025-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:46:38.607Z" type="translation-status" status="3" xml:id="UT22084-096-025-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:46:38.607Z" type="text-version" status="0.0.1" xml:id="UT22084-096-025-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
