--- a/translations/kangyur/placeholders/096-026_toh777,1011-purifying_the_offerings.xml
+++ b/translations/kangyur/placeholders/096-026_toh777,1011-purifying_the_offerings.xml
@@ -12,7 +12,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">yon yongs su sbyong ba zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">dakṣiṇīpariśodhanīnāma</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-026"/>
             </publicationStmt>
             <sourceDesc>
@@ -35,9 +36,19 @@
                     <idno source-id="O1JC114941JC12774" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 23/01/2019 at 09:07:39 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-026-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:49:28.789Z" type="translation-status" status="3" xml:id="UT22084-096-026-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:49:28.789Z" type="text-version" status="0.0.1" xml:id="UT22084-096-026-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
