--- a/translations/kangyur/placeholders/096-028_toh779,1049-the_incantation_of_homage.xml
+++ b/translations/kangyur/placeholders/096-028_toh779,1049-the_incantation_of_homage.xml
@@ -8,7 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī of Homage</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-028"/>
             </publicationStmt>
             <sourceDesc>
@@ -31,9 +32,19 @@
                     <idno source-id="O1JC114941JC12812" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:18.15Z" user="celso">23/09/2021 17:36:18</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-028-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:53:44.479Z" type="translation-status" status="3" xml:id="UT22084-096-028-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-03T14:53:44.479Z" type="text-version" status="0.0.1" xml:id="UT22084-096-028-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
