--- a/translations/kangyur/translations/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/translations/034-030_toh42-the_sutra_of_the_moon.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-030-157">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -151,6 +151,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-09-26T21:38:48.027Z" type="text-version" status="1.0.0" xml:id="UT22084-034-030-163">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2023-10-04T11:10:16.794Z" type="text-version" status="1.0.1" xml:id="UT22084-034-030-164">
+                    <desc>glossary matching and definitions revised - activated in CG</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -568,7 +571,7 @@
                             Araştırmaları</title> 10 (2000): 65–80.</bibl>
                 </div>
             </div>
-            <div type="glossary" status="excluded">
+            <div type="glossary">
                 <list type="glossary">
                     <item>
                         <gloss type="term" xml:id="UT22084-034-030-91">
@@ -592,13 +595,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-034-030-93">
+                        <gloss xml:id="UT22084-034-030-93" type="term" mode="match">
                             <term type="translationMain">asura</term>
+                            <term type="translationAlternative">asura</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">asura</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lha ma yin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལྷ་མ་ཡིན།</term>
-                            <term xml:lang="Pi-Ltn" type="sourceUnspecified">asura</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A class of demigods. The asuras are opponents to the gods.</p>
                             </note>
                         </gloss>
@@ -719,17 +722,14 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-034-030-104">
+                        <gloss xml:id="UT22084-034-030-104" type="person" mode="match">
                             <term type="translationMain">Anāthapiṇḍada</term>
+                            <term type="translationAlternative">anāthapiṇḍika</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">anāthapiṇḍada</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mgon med zas sbyin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མགོན་མེད་ཟས་སྦྱིན།</term>
-                            <term xml:lang="Pi-Ltn" type="sourceUnspecified">anāthapiṇḍika</term>
-                            <note type="definition">
-                                <p>Anāthapiṇḍada was a wealthy merchant in the town of Śrāvastī,
-                                    famous for his generosity to the poor, who became a patron of
-                                    the Buddha Śākyamuni. He bought the Jeta Grove from Prince Jeta
-                                    and built a monastery there for the Buddha.</p>
+                            <note type="definition" rend="override">
+                                <p>Anāthapiṇḍada was a wealthy merchant in the town of Śrāvastī, famous for his generosity to the poor, who became a patron of the Buddha Śākyamuni. He bought the Jeta Grove from Prince Jeta and built a monastery there for the Buddha.</p>
                             </note>
                         </gloss>
                     </item>
@@ -789,16 +789,14 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-034-030-111">
+                        <gloss xml:id="UT22084-034-030-111" type="place" mode="match">
                             <term type="translationMain">Jeta Grove</term>
+                            <term type="translationAlternative">jetavana</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">jetavana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal byed tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བྱེད་ཚལ།</term>
-                            <term xml:lang="Pi-Ltn" type="sourceUnspecified">jetavana</term>
-                            <note type="definition">
-                                <p>A grove that was bought by the Buddha’s wealthy follower and
-                                    supporter Anāthapiṇḍada from a prince named Jeta and donated to
-                                    the Buddha and his saṅgha</p>
+                            <note type="definition" rend="override">
+                                <p>A grove that was bought by the Buddha’s wealthy follower and supporter Anāthapiṇḍada from a prince named Jeta and donated to the Buddha and his saṅgha</p>
                             </note>
                         </gloss>
                     </item>
