--- a/translations/kangyur/translations/072-031_toh331-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/translations/072-031_toh331-the_sutra_of_the_moon.xml
@@ -29,7 +29,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -160,6 +160,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-09-26T21:38:23.739Z" type="text-version" status="1.0.0" xml:id="UT22084-072-031-157">
                     <desc>First published version</desc>
+                </change>
+                <change who="#andre" when="2023-10-04T11:20:02.914Z" type="text-version" status="1.0.1" xml:id="UT22084-072-031-158">
+                    <desc>glossary matching and definitions revised - activated in CG</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -819,16 +822,15 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-072-031-92">
-                                                  <term type="translationMain">asura</term>
-                                                  <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">asura</term>
-                                                  <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lha ma yin</term>
-                                                  <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལྷ་མ་ཡིན།</term>
-                                                  <note type="definition">
-                                                  <p>A class of demigods. The asuras are opponents
-                                                  to the gods.</p>
-                                                  </note>
-                                                </gloss>
+                        <gloss xml:id="UT22084-072-031-92" type="term" mode="match">
+                            <term type="translationMain">asura</term>
+                            <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">asura</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lha ma yin</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ལྷ་མ་ཡིན།</term>
+                            <note type="definition" rend="override">
+                                <p>A class of demigods. The asuras are opponents to the gods.</p>
+                            </note>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-072-031-93">
