--- a/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
+++ b/translations/kangyur/translations/090-005_toh561-the_great_amulet_queen_of_incantations.xml
@@ -32,7 +32,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-005-992">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.9 <date>2023</date>
+                <edition>v 1.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -149,6 +149,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-09-21T18:24:45.591Z" type="text-version" status="1.0.9" xml:id="UT22084-090-005-998">
                     <desc>added contextual definitons.</desc>
+                </change>
+                <change who="#andre" when="2023-10-04T16:14:24.691Z" type="text-version" status="1.0.10" xml:id="UT22084-090-005-999">
+                    <desc>Glossary revised again</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -547,7 +550,7 @@
                         for the sake of awakening. His body, adorned with the thirty-two marks of a
                         great being, blazed brightly. His limbs and extremities were decorated with
                         the eighty sublime characteristics, the top of his head was beyond the sight
-                        of all beings, and he understood all the activities of <term ref="UT22084-090-005-847">Māra</term>. He comprehended the mentality and
+                        of all beings, and he understood all the activities of Māra. He comprehended the mentality and
                         conduct of all beings and possessed the five eyes. He was replete with the
                         most supreme of all characteristics and the wisdom of omniscience. He
                         possessed all the qualities of a buddha, had defeated all the hordes of
@@ -1681,7 +1684,7 @@
                         this <distinct>great amulet</distinct>. This great dhāraṇī purifies all
                         evil. It is strong, mighty, <ref cRef="F.130.a" type="folio" xml:id="UT22084-090-005-682"/> splendorous, and shining. Its good
                         qualities are extolled widely. It is the powerful vanquisher of all the gods
-                        of the māra realm. It severs <term ref="UT22084-090-005-847">Māra</term>’s
+                        of the māra realm. It severs Māra’s
                         noose, which binds habitual patterns together. It neutralizes those with
                         harmful intent who use rival mantras and mudrās, poison, kākhordas, the
                         enlistment of kiraṇas, and hostile magic. It protects those who take great
@@ -3007,13 +3010,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-005-706">
+                        <gloss xml:id="UT22084-090-005-706" type="term" mode="match">
                             <term type="translationMain">chāyā</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">chāyā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">grib gnon</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">གྲིབ་གནོན།</term>
                             <note type="definition">
-                                <p>A class of nonhuman being.</p>
+                                <p>A class of nonhuman beings.</p>
                             </note>
                         </gloss>
                     </item>
@@ -3095,13 +3098,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-005-716">
+                        <gloss xml:id="UT22084-090-005-716" type="term" mode="match">
                             <term type="translationMain">five limbs</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">pañcamaṇḍalaka</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">yan lag lnga</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཡན་ལག་ལྔ།</term>
                             <note type="definition">
-                                <p>The arms, legs, and head.</p>
+                                <p>The two arms, two legs, and head.</p>
                             </note>
                         </gloss>
                     </item>
@@ -3347,12 +3350,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-005-739">
+                        <gloss xml:id="UT22084-090-005-739" type="term" mode="match">
                             <term type="translationMain">mudrā</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">mudrā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">phyag rgya</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཕྱག་རྒྱ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A seal, or a hand gesture used in ritual proceedings.</p>
                             </note>
                         </gloss>
@@ -3451,16 +3454,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-005-750">
+                        <gloss xml:id="UT22084-090-005-750" type="term" mode="match">
                             <term type="translationMain">ṛṣi</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">ṛṣi</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">drang srong</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དྲང་སྲོང་།</term>
-                            <note type="definition">
-                                <p>An ancient Indian spiritual title for divinely inspired
-                                    individuals credited with creating the foundations for Indian
-                                    culture. The term can also be used generically to refer to a
-                                    class of beings.</p>
+                            <note type="definition" rend="override">
+                                <p>An ancient Indian spiritual title for divinely inspired individuals credited with creating the foundations for Indian culture. The term can also be used generically to refer to a class of beings.</p>
                             </note>
                         </gloss>
                     </item>
@@ -3667,14 +3667,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss mode="marked" type="term" xml:id="UT22084-090-005-772">
+                        <gloss xml:id="UT22084-090-005-772" type="term" mode="marked">
                             <term type="translationMain">trichiliocosm</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">tri­sāhasramahāsāhasra-lokadhātu</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">tri­sāhasramahāsāhasra­lokadhātu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">stong gsum gyi stong chen po</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྟོང་གསུམ་གྱི་སྟོང་ཆེན་པོ།</term>
-                            <note type="definition">
-                                <p>The largest universe spoken of in Buddhist cosmology, consisting
-                                    of one billion smaller world systems.</p>
+                            <note type="definition" rend="override">
+                                <p>The largest universe spoken of in Buddhist cosmology, consisting of one billion smaller world systems.</p>
                             </note>
                         </gloss>
                     </item>
@@ -3743,17 +3742,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-090-005-780">
-                            <term type="translationMain">māra</term>
+                        <gloss type="person" xml:id="UT22084-090-005-780">
+                            <term type="translationMain">Māra</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">māra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bdud</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བདུད།</term>
-                            <note type="definition">
-                                <p>The deities ruled over by Māra who do not wish any beings to
-                                    escape from saṃsāra. The term also refers to the personification
-                                    of conceptual and emotional obstacles as well as the defects
-                                    within a person that prevent awakening.</p>
-                            </note>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བདུད།</term>  
                         </gloss>
                     </item>
                     <item>
@@ -3920,13 +3913,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-090-005-800">
+                        <gloss xml:id="UT22084-090-005-800" type="person" mode="match">
                             <term type="translationMain">Brahmadatta</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">brahmadatta</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">tshangs pas byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཚངས་པས་བྱིན།</term>
                             <note type="definition">
-                                <p>A king in Vārāṇasī. </p>
+                                <p>A king of Vārāṇasī. </p>
                             </note>
                         </gloss>
                     </item>
@@ -4000,13 +3993,13 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-090-005-807">
+                        <gloss xml:id="UT22084-090-005-807" type="person" mode="match">
                             <term type="translationMain">Dharmamati</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">dharmamati</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">chos kyi blo gros</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཆོས་ཀྱི་བློ་གྲོས།</term>
                             <note type="definition">
-                                <p>A prominent merchant</p>
+                                <p>A prominent merchant in Kuśinagara.</p>
                             </note>
                         </gloss>
                     </item>
@@ -4431,17 +4424,6 @@
                         <note type="definition">
                             <p>A goddess in this sūtra.</p>
                         </note>
-                        </gloss>
-                    </item>
-                    <item>
-                        <gloss xml:id="UT22084-090-005-847" type="person" mode="marked">
-                            <term type="translationMain">Māra</term>
-                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">māra</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">bdud</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">བདུད།</term>
-                            <note type="definition" rend="override">
-                                <p>The demon who assailed Śākyamuni prior to his awakening.</p>
-                            </note>
                         </gloss>
                     </item>
                     <item>
@@ -5342,13 +5324,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="place" xml:id="UT22084-090-005-938">
+                        <gloss xml:id="UT22084-090-005-938" type="place" mode="match">
                             <term type="translationMain">Sahā world</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">sahā</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mi
-                                mjed</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mi mjed</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མི་མཇེད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A name for the “world” in which we live. </p>
                             </note>
                         </gloss>
