--- a/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
+++ b/translations/kangyur/placeholders/091-036_toh639,879-the_incantation_of_the_one_hundred_and_eight_names_of_youthful_manjusri.xml
@@ -21,11 +21,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-036-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-036"/>
                 <date/>
             </publicationStmt>
@@ -103,6 +103,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-24T07:42:57.822Z" type="text-version" status="0.0.12" xml:id="UT22084-091-036-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T08:51:35.162Z" type="translation-status" status="2.c" xml:id="UT22084-091-036-25">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T08:51:35.162Z" type="text-version" status="0.0.13" xml:id="UT22084-091-036-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
