--- a/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
+++ b/translations/kangyur/placeholders/091-039_toh642-the_hundred_and_eight_names_of_manjusri.xml
@@ -17,11 +17,11 @@
                 <editor role="copyEditor" xml:id="UT22084-091-039-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2023</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-039"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-24T07:44:03.072Z" type="text-version" status="0.0.12" xml:id="UT22084-091-039-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T08:54:04.35Z" type="translation-status" status="2.c" xml:id="UT22084-091-039-26">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T08:54:04.35Z" type="text-version" status="0.0.13" xml:id="UT22084-091-039-27">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
