--- a/translations/kangyur/translations/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
+++ b/translations/kangyur/translations/100-022_toh865-the_incantation_of_the_buddha_vairocana.xml
@@ -23,7 +23,7 @@
                                         Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.3 <date>2023</date>
+                <edition>v 1.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -151,6 +151,9 @@
                 <change who="#martina-cotter" when="2023-10-04T21:22:55.601Z" type="text-version" status="1.0.3" xml:id="UT22084-100-022-86">
                     <desc>Updated Qianlong spelled incorrectly.</desc>
                 </change>
+                <change who="#john" when="2023-10-06T09:17:45.779Z" type="text-version" status="1.0.4" xml:id="UT22084-100-022-87">
+                    <desc>Minor edits.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -233,14 +236,13 @@
                                         </p>
                                         <milestone unit="chunk" xml:id="UT22084-100-022-11"/>
                                         <p tid="12">Notably, the dhāraṇī is one of only twelve works
-                                                in the Compendium of Dhāraṇīs section that are not
-                                                duplicated in other sections of the Kangyur.
-                                                Therefore, it appears that these twelve texts found
+                                                in the Compendium of Dhāraṇīs section that, because they are not
+                                                duplicated in other sections of the Kangyur,
+                                                are likely to have found
                                                 their way into the Tshalpa lineage Kangyurs
-                                                specifically because of being part of the Compendium
-                                                of Dhāraṇīs, which most likely was compiled based on
-                                                earlier collections of dhāraṇīs and associated
-                                                ritual texts.<note place="end" xml:id="UT22084-100-022-12"> The opening lines of
+                                                as a result of having been included in earlier collections
+                                                of dhāraṇīs and associated ritual texts from which the 
+                                                Compendium of Dhāraṇīs seems to have been compiled.<note place="end" xml:id="UT22084-100-022-12"> The opening lines of
                                                   the table of contents (<foreign xml:lang="Bo-Ltn" type="term">dkar chag</foreign>) of an independent
                                                   dhāraṇī collection printed in Beijing in 1731,
                                                   found in the Library of the Hungarian Academy of
@@ -258,8 +260,7 @@
                                                   Dunhuang. Like the canonical collection, these
                                                   contain praises and prayers as well as dhāraṇīs.
                                                   See Hidas 2021 for the catalogs of eighteen <title xml:lang="Sa-Ltn">dhāraṇī­saṃgraha</title>
-                                                  collections surviving in Sanskrit. </note>
-                    </p>
+                                                  collections surviving in Sanskrit.</note> </p>
                                         <milestone unit="chunk" xml:id="UT22084-100-022-14"/>
                                         <p tid="13">Since the text lacks a translator’s colophon, we
                                                 do not know when it was translated into Tibetan.
@@ -274,8 +275,8 @@
                                                 to the two recensions of the work in the Namgyal
                                                 Collection. The text is stable across all recensions
                                                 consulted, with some slight variation in a single
-                                                alternate recension found in the Sūtra section of
-                                                the Namgyal Collection.<note place="end" xml:id="UT22084-100-022-16"> This alternate
+                                                alternative recension found in the Sūtra section of
+                                                the Namgyal Collection.<note place="end" xml:id="UT22084-100-022-16"> This alternative
                                                   recension, however, was important in solving a
                                                   textual problem in the homage of the text. See <ptr target="#UT22084-100-022-22"/>.</note> The dhāraṇī itself has been
                                                 rendered in this translation according to the Degé
@@ -337,7 +338,7 @@
                                                 One will take rebirth in accordance with the
                                                 aspirations that one makes. </p>
                                         <lb/>
-                                        <p tid="28">The end.</p>
+                                        <p tid="28">This completes the dhāraṇī.</p>
                                 </tei:div>
                         </tei:div>
                 </body>
