--- a/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
+++ b/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
@@ -10,14 +10,16 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśaya­parivarta­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśayaparivartanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lhag pa'i bsam pa brtan pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
+                <author role="translatorMain" xml:id="UT22084-063-005-1"/>
+                <author role="translatorEng" xml:id="UT22084-063-005-2">Sophie McGrath</author>
+                <editor role="reviser" xml:id="UT22084-063-005-3">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.3 <date>2020</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-063-005"/>
                 <date/>
             </publicationStmt>
@@ -32,13 +34,33 @@
                     <idno source-id="O1JC114941JC11867" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-06-27T07:34:56.333Z" user="admin">27/06/2023 07:34:56</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:42:44.674Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2023-05-22T08:46:20.429Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-27T07:34:52.034Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2023-06-27T07:34:52.034Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-04-21T13:42:44.674Z" type="text-version" status="0.0.1" xml:id="UT22084-063-005-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-22T08:46:20.429Z" type="text-version" status="0.0.2" xml:id="UT22084-063-005-5">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-27T07:34:52.034Z" type="translation-status" status="2.h" xml:id="UT22084-063-005-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-27T07:34:52.034Z" type="text-version" status="0.0.3" xml:id="UT22084-063-005-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-06-27T07:35:44.193Z" type="text-version" status="0.0.4" xml:id="UT22084-063-005-8">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-063-005-9">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T11:19:10.858Z" type="translation-status" status="2.g" xml:id="UT22084-063-005-10">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T11:19:10.858Z" type="text-version" status="0.0.6" xml:id="UT22084-063-005-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
