--- a/translations/kangyur/placeholders/096-039_toh790,1028-the_incantation_for_selfprotection.xml
+++ b/translations/kangyur/placeholders/096-039_toh790,1028-the_incantation_for_selfprotection.xml
@@ -9,7 +9,8 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī for Self-Protection</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bdag srung ba'i gzungs/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-039"/>
             </publicationStmt>
             <sourceDesc>
@@ -32,9 +33,19 @@
                     <idno source-id="O1JC114941JC12791" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:33.875Z" user="celso">23/09/2021 17:36:33</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-039-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:15:09.739Z" type="translation-status" status="3" xml:id="UT22084-096-039-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:15:09.739Z" type="text-version" status="0.0.1" xml:id="UT22084-096-039-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
