--- a/translations/kangyur/placeholders/096-040_toh791,1033-the_incantation_for_attractiveness.xml
+++ b/translations/kangyur/placeholders/096-040_toh791,1033-the_incantation_for_attractiveness.xml
@@ -10,7 +10,8 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yid du 'ong ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yid du 'ong ba zhes bya ba/</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-096-040"/>
             </publicationStmt>
             <sourceDesc>
@@ -33,9 +34,19 @@
                     <idno source-id="O1JC114941JC12796" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:36:35.416Z" user="celso">23/09/2021 17:36:35</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-040-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:16:20.39Z" type="translation-status" status="3" xml:id="UT22084-096-040-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:16:20.39Z" type="text-version" status="0.0.1" xml:id="UT22084-096-040-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
