--- a/translations/kangyur/placeholders/099-015_toh842-tantra_of_the_flaming_dakini.xml
+++ b/translations/kangyur/placeholders/099-015_toh842-tantra_of_the_flaming_dakini.xml
@@ -8,7 +8,8 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">ḍākinyagnijihvājvālātantra</title>
                 <title type="mainTitle" xml:lang="en">Tantra of the Flaming Ḍākinī</title>
             </titleStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-099-015"/>
             </publicationStmt>
             <sourceDesc>
@@ -22,9 +23,19 @@
                     <idno source-id="O1JC114941JC12602" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated">Last updated at 07/09/2018 at 09:37:27 by admin</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+            
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-099-015-1">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:58:10.728Z" type="translation-status" status="3" xml:id="UT22084-099-015-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-06T12:58:10.728Z" type="text-version" status="0.0.1" xml:id="UT22084-099-015-3">
+                    <desc>User set version to 0.0.1</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
